# uniject

./: .gitignore  CMakeLists.txt  README.md
include/: uniject.h
include/uniject/: base.h  crt.h  data.h  error.h  injector.h  ipc.h  logger.h  module.h  packing.h  params.h  preconfig.h  process.h  utility.h  win32.h
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  args.c  args.h  main.c  parg.c  parg.h  pch.h
src/dll/: CMakeLists.txt  error.c  error.h  loader.c  loader.h  main.c  mono_api.c  mono_api.h  mono_api.inl  mono_api_calls.inl  mono_types.h  pch.h
src/lib/: CMakeLists.txt  base.c  base_private.h  build_config.h  data.c  error.c  error_private.h  injector.c  internal.h  ipc.c  module.c  packing.c  params.c  pch.h  peutil.h  process.c  process_private.h  utility.c  win32.c
src/lib/asm/: .gitignore  remote-thread32.asm  remote-thread64.asm  remote_thread32.asm  test.asm  thread-context32.asm  thread-context64.asm  thread_context32.asm  thread_context64.asm
tests/: CMakeLists.txt  data_test.c  hijack-test.c  inject-test.c  packing-test.c  test-dll.c  test-hijack32.cmd  test-hijack64.cmd  test-inject32.cmd  test-inject64.cmd
tools/: bincode.py
